Gives titles to the links

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,10 +19,10 @@
                     <a href="{{ site.baseurl }}/">Home</a>
                 </li>
                 <li>
-                    <a href="{{ /about | prepend: site.baseurl }}">{{ About }}</a>
+                    <a href="{{ /about | prepend: site.baseurl }}">About</a>
                 </li>
                 <li>
-                    <a href="{{ /news | prepend: site.baseurl }}">{{ News }}</a>
+                    <a href="{{ /news | prepend: site.baseurl }}">News</a>
                 </li>
             </ul>
         </div>
